feat: Add PDF display functionality for problem answers and explanations

--- a/templates/math/problems/pdf.html
+++ b/templates/math/problems/pdf.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<title>{{ data["title"] }}</title>
+		<title>{{ title }}</title>
 		<script id="MathJax" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 		<style>
 			@font-face {
@@ -20,8 +20,8 @@
 		</style>
 	</head>
 	<body>
-		<div class="math-font" style="max-width: 1180px;margin-right: auto;">
-			{{ math_format(data["content"]) | replace("\r\n", "<br>") | safe }}
+		<div class="math-font" style="width: 1000px;padding-left: 80px;padding-right: 80px;font-size: 1.2em;">
+			{{ math_format(content) | replace("\r\n", "<br>") | safe }}
 		</div>
 	</body>
 </html>
